# electo1-js

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js
.devcontainer/: devcontainer.json
documentation/: algorithms.md  api_reference.md  dev_guide.md  frontend_overview.md  user_guide.md
fastapi/: .replit  Pasted--Overview-The-Agentic-Election-Prediction-System-is-designed-to-forecast-election-outcomes-by-1726958739944.txt  README.md  data_handler.py  election_model.joblib  main.py  model.py  pyproject.toml  replit.nix  test.db
fastapi/agents/: analysis.py  data_ingestion.py  data_processing.py  optimization.py  prediction.py
fastapi/api/: crud.py  database.py  dependencies.py  main.py  models.py  schemas.py
fastapi/api/routers/: agent_deployment.py  data_sources.py  library.py  predictions.py  settings.py  tactics.py
fastapi/documentation/: advanced_uses.md  api_reference.md  customization.md
fastapi/event_bus/: event_bus.py
fastapi/ml/: model.py
fastapi/static/: index.html  script.js  styles.css
fastapi/static/css/: style.css
fastapi/static/js/: script.js
fastapi/templates/: index.html
fastapi/tests/: test_agents.py  test_api.py
src/: App.jsx  index.css
src/components/: AIInterface.jsx  APIReference.jsx  AgentDeployment.jsx  AgentStatus.jsx  ControlConsole.jsx  ControlPanel.jsx  Dashboard.jsx  DataSourceForm.jsx  DataSourceList.jsx  DataSourceStatus.jsx  DataSourceWizard.jsx  DataSources.jsx  Footer.jsx  Header.jsx  LibrarySection.jsx  MapComponent.jsx  PredictionCard.jsx  PredictionChart.jsx  PredictionList.jsx  (+8 more)
(+11 files in other folders)
